--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
   <script src="objects.js"></script>
   <script src="utility.js"></script>
   <script src="chaining.js"></script>
-  <script src="speed.js"></script>
+  <!--<script src="speed.js"></script>-->
 </head>
 <body>
   <div id="qunit"></div>
